Fix check switches being affected by parent text-align value

--- a/less/forms.less
+++ b/less/forms.less
@@ -715,6 +715,7 @@ fieldset:disabled input[type="radio"].radiobox + label {
 .chk-switch {
 	position: relative;
 	display: inline-block;
+	text-align: center;
 
 	input[type="checkbox"]:checked,
 	input[type="checkbox"]:not(:checked) {
